Write test for both configuration

--- a/src/main/resources/swagger.properties
+++ b/src/main/resources/swagger.properties
@@ -1,2 +1,2 @@
 documentation.services.version=1.0
-documentation.services.basePath=http://localhost:8080/zencontact/
+documentation.services.basePath=http://localhost:8080/zencontact
